--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,8 @@
 <body class="m-3">
 <h3>Latest queries</h3>
 <p>Todo</p>
-<a href="addform.html" class="btn btn-info btn-lg">
-    <span class="glyphicon glyphicon-plus"></span> Plus
+<a href="addform.html" class="btn btn-info btn-primary">
+    <span class="oi oi-plus"></span> Plus
 </a>
 
 <!-- Optional JavaScript -->
