Renamed the button

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 <h3>Latest queries</h3>
 <p>Todo</p>
 <a href="addform.html" class="btn btn-info btn-primary">
-    <span class="oi oi-plus"></span> Plus
+    <span class="oi oi-plus"></span> Add new
 </a>
 
 <!-- Optional JavaScript -->
