Added highcharts example

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 </head>
 <body class="m-3">
 <h3>Latest queries</h3>
-<p>Todo</p>
+<div id="chart-container"></div>
 <a href="addform.html" class="btn btn-info btn-primary">
     <span class="oi oi-plus"></span> Add new
 </a>
@@ -25,6 +25,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
+<script src="https://code.highcharts.com/highcharts.src.js"></script>
 <script src="js/Index.js"></script>
 </body>
 </html>
