--- a/public/addform.html
+++ b/public/addform.html
@@ -48,6 +48,10 @@
                 </select>
             </div>
         </div>
+        <div class="form-group mb-3 row">
+            <label for="comment" class="col-sm-2 col-form-label">Тагове</label>
+            <textarea class="col-sm-10 form-control rounded-0" id="comment" name="comment" rows="3"></textarea>
+        </div>
         <div class="form-group row">
             <div class="col-sm-10">
                 <button data-type="submit" type="submit" class="btn btn-primary">Save</button>
