--- a/public/addform.html
+++ b/public/addform.html
@@ -49,7 +49,7 @@
             </div>
         </div>
         <div class="form-group mb-3 row">
-            <label for="comment" class="col-sm-2 col-form-label">Тагове</label>
+            <label for="comment" class="col-sm-2 col-form-label">Коментар</label>
             <textarea class="col-sm-10 form-control rounded-0" id="comment" name="comment" rows="3"></textarea>
         </div>
         <div class="form-group row">
