--- a/public/addform.html
+++ b/public/addform.html
@@ -14,7 +14,7 @@
 </head>
 <body class="m-3">
     <h3>Add your invoice</h3>
-    <form>
+    <form id="myform">
         <div class="form-group mb-3 row">
             <label for="amount" class="col-sm-2 col-form-label">Сума</label>
             <div class="col-sm-10">
