Changed chart to stacked column

--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,12 @@
     <title>Add expense</title>
 </head>
 <body class="m-3">
-<h3>Latest queries</h3>
-<div id="chart-container"></div>
+<h3>Общи разходи</h3>
 <a href="addform.html" class="btn btn-info btn-primary">
     <span class="oi oi-plus"></span> Add new
 </a>
+<div id="chart-container"></div>
+
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
