--- a/public/addform.html
+++ b/public/addform.html
@@ -53,7 +53,8 @@
             <textarea class="col-sm-10 form-control rounded-0" id="comment" name="comment" rows="3"></textarea>
         </div>
         <div class="form-group row">
-            <div class="col-sm-10">
+            <div class="col-sm-6">
+                <button data-type="back" class="btn btn-danger">Cancel</button>
                 <button data-type="submit" type="submit" class="btn btn-primary">Save</button>
             </div>
         </div>
