--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,17 @@
 </head>
 <body class="m-3">
 <h3>Общи разходи</h3>
-<a href="addform.html" class="btn btn-info btn-primary">
+<a href="addform.html" class="btn btn-info btn-primary mb-6">
     <span class="oi oi-plus"></span> Add new
 </a>
+<div class="form-group mt-3">
+    <label for="groupBy">Групирай по</label>
+    <select class="form-control" id="groupBy">
+        <option value="category">Категория</option>
+        <option value="counterpart">Контрагент</option>
+        <option value="tags">Таг</option>
+    </select>
+</div>
 <div id="chart-container"></div>
 
 
