--- a/public/index.html
+++ b/public/index.html
@@ -16,14 +16,28 @@
 <a href="addform.html" class="btn btn-info btn-primary mb-6">
     <span class="oi oi-plus"></span> Add new
 </a>
+<form>
 <div class="form-group mt-3">
-    <label for="groupBy">Групирай по</label>
-    <select class="form-control" id="groupBy">
-        <option value="category">Категория</option>
-        <option value="counterpart">Контрагент</option>
-        <option value="tags">Таг</option>
-    </select>
+    <label for="groupBy" class="col-sm-2">Групирай по</label>
+    <div class="col-sm-10">
+        <select class="form-control" id="groupBy">
+            <option value="category">Категория</option>
+            <option value="counterpart">Контрагент</option>
+            <option value="tags">Таг</option>
+        </select>
+    </div>
+
+    <label class="col-sm-2" for="startDate">От</label>
+    <div class="col-sm-10">
+        <input class="form-control" type="date" step="any" id="startDate" name="startDate">
+    </div>
+    <label class="col-sm-2" for="endDate">До</label>
+    <div class="col-sm-10">
+        <input class="form-control" type="date" step="any" id="endDate" name="endDate">
+    </div>
 </div>
+
+</form>
 <div id="chart-container"></div>
 
 
@@ -35,6 +49,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
 <script src="https://code.highcharts.com/highcharts.src.js"></script>
+<script src="js/Report.js"></script>
 <script src="js/Index.js"></script>
 </body>
 </html>
