--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,9 @@
     <div class="col-sm-10">
         <input class="form-control" type="date" step="any" id="endDate" name="endDate">
     </div>
+    <a href="#" id="updateReport" class="btn btn-info btn-primary mb-6">
+        <span class="oi oi-plus"></span> Актуализирай
+    </a>
 </div>
 
 </form>
