Added basic grid functionality

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />
     <link href="/open-iconic/font/css/open-iconic-bootstrap.css" rel="stylesheet" />
-
+    <link rel="stylesheet" href="js/SlickGrid-2.4.3/slick.grid.css" type="text/css"/>
+    <link rel="stylesheet" href="js/SlickGrid-2.4.3/css/smoothness/jquery-ui-1.11.3.custom.css" type="text/css"/>
 
     <title>Add expense</title>
 </head>
@@ -42,6 +43,7 @@
 
 </form>
 <div id="chart-container"></div>
+<div id="grid-container" style="width:480px; height: 500px;"></div>
 
 
 <!-- Optional JavaScript -->
@@ -50,8 +52,11 @@
 <script src="http://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
+<script src="js/SlickGrid-2.4.3/lib/select2.js"></script>
 <script src="https://code.highcharts.com/highcharts.src.js"></script>
+<script src="js/SlickGrid-2.4.3/lib/jquery.event.drag-2.3.0.js"></script>
+<script src="js/SlickGrid-2.4.3/slick.core.js"></script>
+<script src="js/SlickGrid-2.4.3/slick.grid.js"></script>
 <script src="js/Report.js"></script>
 <script src="js/Index.js"></script>
 </body>
